# multichannel-tool

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  README.md
res/: CMakeLists.txt  ChannelStacker.entitlements
src/: MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h  main.cpp
src/audio/: AudioPlayer.cpp  AudioPlayer.h  WaveformExtractor.cpp  WaveformExtractor.h
src/ffmpeg/: FFProbe.cpp  FFProbe.h  FFmpegLocator.cpp  FFmpegLocator.h
src/model/: ProjectModel.cpp  ProjectModel.h
src/ui/: LaneComponent.cpp  LaneComponent.h  LaneListComponent.cpp  LaneListComponent.h  Mach1LookAndFeel.h
